# PyreWire

./: .flake8  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  lint-push-main.yml  nightly.yml  release.yml  wheels.yml
api-stability/: index.html
docs/: api-stability.md  index.md  quickstart.md  release-candidate-checklist.md  support.md  versioning.md
docs/reference/: async.md  batch.md  compounds.md  errors.md  io.md  ir.md  program.md  sessions.md
docs/semantics/: compounds.md  step-vs-snapshot.md  threading.md  zset.md
examples/: 01_simple.py  02_reachability.py  03_bitwise.py  04_hash_functions.py  05_crc32_checksum.py  06_timestamp_lww.py  07_multi_source_analysis.py  08_delta_queries.py  10_recursive_under_update.py  11_time_evolution.py  12_batch_vs_session.py  12_snapshot_vs_delta.py  README.md  csv_adapter_reachability.py  retraction_basics.py
quickstart/: index.html
reference/async/: index.html
reference/batch/: index.html
reference/compounds/: index.html
reference/errors/: index.html
reference/io/: index.html
reference/ir/: index.html
reference/program/: index.html
reference/sessions/: index.html
release-candidate-checklist/: index.html
scripts/: build_wirelog.ps1  build_wirelog.sh  bundle_libwirelog.py
scripts/ci/: check_dynamic_link.py  extract_changelog_section.py  open_nightly_failure_issue.sh
search/: search_index.json
semantics/compounds/: index.html
semantics/step-vs-snapshot/: index.html
semantics/threading/: index.html
semantics/zset/: index.html
src/pyrewire/: __init__.py  asyncio_session.py  batch.py  compound.py  helpers.py  io_adapter.py  ir.py  program.py  result.py  session.py
src/pyrewire/_core/: __init__.py  _libc.py  callbacks.py  errors.py  intern.py  stdcapture.py
src/pyrewire/_ffi/: __init__.py  _advanced.py  _easy.py  _enums.py  _executor.py  _io.py  _ir.py  _loader.py  _parser.py  _types.py  _util.py
src/pyrewire/_lib/: __init__.py
support/: index.html
tests/: __init__.py  test_abi_smoke.py  test_advanced_ffi.py  test_async.py  test_batch.py  test_batch_loadfacts.py  test_callbacks.py  test_changelog_format.py  test_check_dynamic_link.py  test_ci_workflow.py  test_compound.py  test_dependabot_config.py  test_easy_deltas.py  test_easy_ffi.py  test_easy_insert_sym.py  test_easy_session.py  test_easy_step_monkeypatched.py  test_easy_step_snapshot.py  test_errors.py  test_executor_ffi.py  test_extract_changelog_section.py  test_ffi_types.py  test_helpers.py  test_install_test_workflow.py  test_intern.py  test_io_adapter.py  test_io_ffi.py  test_ir.py  test_ir_ffi.py  test_libc.py  test_loader.py  test_nightly_workflow.py  test_numpy_batch.py  test_parser_ffi.py  test_pep561_packaging.py  test_preview_inline_facts.py  test_program.py  test_program_facts.py  test_program_relation_ir.py  test_release_metadata.py  (+9 more)
tests/data/: wirelog_abi.txt
tests/docs/: test_api_stability_contract.py  test_doc_examples_executable.py  test_mkdocs_build.py  test_release_candidate_checklist.py  test_semantics_executable.py  test_support_matrix.py  test_versioning_contract.py
tests/integration/: __init__.py  test_examples.py  test_retraction_basics.py  test_wheel_install.py
versioning/: index.html
