[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrewire"
version = "0.41.0"
description = "Python wrapper for wirelog - declarative dataflow analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 OR GPL-3.0-or-later"
license-files = ["LICENSE", "LICENSE-APACHE", "LICENSE-GPL"]
authors = [
    {name = "PyreWire Contributors"}
]
keywords = ["wirelog", "datalog", "dataflow", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "numpy>=1.24",
    # Required by tests/test_sdist_contents.py (#51); without it those
    # tests skip themselves but CI prefers them runnable.
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/semantic-reasoning/PyreWire"
Repository = "https://github.com/semantic-reasoning/PyreWire"
Documentation = "https://github.com/semantic-reasoning/PyreWire#readme"
Issues = "https://github.com/semantic-reasoning/PyreWire/issues"

[tool.setuptools]
packages = ["pyrewire", "pyrewire._core", "pyrewire._ffi", "pyrewire._lib"]
package-dir = {"" = "src"}

# Belt-and-suspenders with MANIFEST.in: different setuptools versions
# consult these rules in slightly different orders, so we list them in
# both places. See #51 for the rationale.
[tool.setuptools.exclude-package-data]
"pyrewire._lib" = ["*.so", "*.so.*", "*.dylib", "*.dll", "*.pyd"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
# Tests are intentionally excluded from strict checking — they
# monkey-patch ctypes globals, fake CDLL handles via MagicMock, and
# drive failure paths with wrongly-typed values. The CI workflow
# invokes `mypy src/pyrewire` to enforce this scope; running
# `mypy .` locally is a no-op for tests/.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]   # line length owned by black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=pyrewire --cov-report=term-missing --cov-report=html --cov-fail-under=90"
