[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrewire"
version = "0.41.99"
description = "Python wrapper for wirelog - declarative dataflow analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 OR GPL-3.0-or-later"
license-files = ["LICENSE", "LICENSE-APACHE", "LICENSE-GPL"]
authors = [
    {name = "PyreWire Contributors"}
]
keywords = ["wirelog", "datalog", "dataflow", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "numpy>=1.24",
    # Required by tests/test_sdist_contents.py (#51); without it those
    # tests skip themselves but CI prefers them runnable.
    "build>=1.0",
    # Required by tests/test_release_workflow_yaml.py (#37).
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/semantic-reasoning/PyreWire"
Repository = "https://github.com/semantic-reasoning/PyreWire"
Documentation = "https://github.com/semantic-reasoning/PyreWire#readme"
Issues = "https://github.com/semantic-reasoning/PyreWire/issues"

[tool.setuptools]
packages = ["pyrewire", "pyrewire._core", "pyrewire._ffi", "pyrewire._lib"]
package-dir = {"" = "src"}

[tool.cibuildwheel]
# Match the project's supported Pythons. PyPy / musllinux are skipped
# because PyreWire's ctypes path has only been validated on CPython
# glibc + macOS + Windows MSVC.
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* pp* *_i686 *_ppc64le *_s390x"
test-command = "pytest -q {project}/tests/integration"
test-requires = ["pytest"]
# Pin the wirelog source tag here too so the environment matches the
# `WIRELOG_VERSION` used by the test-matrix workflow.
environment = { WIRELOG_VERSION = "v0.43.0" }

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = """
  yum install -y ninja-build pkgconfig && \
  pip install meson && \
  WIRELOG_PREFIX=/wirelog-install bash {project}/scripts/build_wirelog.sh
"""
environment = { WIRELOG_VERSION = "v0.43.0", WIRELOG_PREFIX = "/wirelog-install", WIRELOG_LIB = "/wirelog-install/lib/libwirelog.so.1", LD_LIBRARY_PATH = "/wirelog-install/lib" }
# `auditwheel` bundles libwirelog.so.1 into the wheel and patches the
# RPATH (#31). Without this every wheel would ship as a manylinux
# wheel that immediately fails at import time on systems without the
# library installed.
repair-wheel-command = "LD_LIBRARY_PATH=/wirelog-install/lib auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = """
  brew install ninja meson pkg-config && \
  WIRELOG_PREFIX=/usr/local/wirelog-install bash {project}/scripts/build_wirelog.sh
"""
environment = { WIRELOG_VERSION = "v0.43.0", WIRELOG_PREFIX = "/usr/local/wirelog-install", WIRELOG_LIB = "/usr/local/wirelog-install/lib/libwirelog.1.dylib", DYLD_LIBRARY_PATH = "/usr/local/wirelog-install/lib" }
# `delocate` is macOS's auditwheel equivalent — copies the dylib into
# the wheel and rewrites install names so the bundled copy wins.
repair-wheel-command = "DYLD_LIBRARY_PATH=/usr/local/wirelog-install/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
before-all = "powershell {project}\\scripts\\build_wirelog.ps1"
environment = { WIRELOG_VERSION = "v0.43.0", WIRELOG_PREFIX = "C:\\wirelog-install", WIRELOG_LIB = "C:\\wirelog-install\\bin\\wirelog-1.dll" }
# `delvewheel` is the Windows analogue. The bundled DLL ends up in
# `pyrewire/_lib/` and the loader (#2) finds it ahead of system paths.
repair-wheel-command = "delvewheel repair -w {dest_dir} --add-path C:\\wirelog-install\\bin {wheel}"

# Belt-and-suspenders with MANIFEST.in: different setuptools versions
# consult these rules in slightly different orders, so we list them in
# both places. See #51 for the rationale.
[tool.setuptools.exclude-package-data]
"pyrewire._lib" = ["*.so", "*.so.*", "*.dylib", "*.dll", "*.pyd"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
# Tests are intentionally excluded from strict checking — they
# monkey-patch ctypes globals, fake CDLL handles via MagicMock, and
# drive failure paths with wrongly-typed values. The CI workflow
# invokes `mypy src/pyrewire` to enforce this scope; running
# `mypy .` locally is a no-op for tests/.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]   # line length owned by black

[tool.ruff.lint.isort]
# ruff's default target-version is the same as `tool.ruff.target-version`
# (py310), so `tomllib` would be classified as third-party even though
# it ships in the Python 3.11+ stdlib. Mark it stdlib explicitly so the
# `I001` rule agrees with the `[tool.isort]` profile = "black" settings
# the rest of the repo uses.
extra-standard-library = ["tomllib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=pyrewire --cov-report=term-missing --cov-report=html --cov-fail-under=90"
